src/test/ui/tool-attributes/tool-attributes-shadowing.rs
mod rustfmt {}

#[rustfmt::skip] //~ ERROR failed to resolve. Could not find `skip` in `rustfmt`
fn main() {}
